--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "click-outside-vue3": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "v-click-outside": "^3.2.0",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13"
   },
